tests/baselines/reference/typeArgumentsOnFunctionsWithNoTypeParameters.errors.txt
tests/cases/compiler/typeArgumentsOnFunctionsWithNoTypeParameters.ts(2,15): error TS2558: Expected 0 type arguments, but got 1.
tests/cases/compiler/typeArgumentsOnFunctionsWithNoTypeParameters.ts(3,15): error TS2345: Argument of type '1' is not assignable to parameter of type 'T'.
  '1' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/compiler/typeArgumentsOnFunctionsWithNoTypeParameters.ts(4,15): error TS2558: Expected 0 type arguments, but got 1.


==== tests/cases/compiler/typeArgumentsOnFunctionsWithNoTypeParameters.ts (3 errors) ====
    function foo<T, U>(f: (v: T) => U) {
       var r1 = f<number>(1);
                  ~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
       var r2 = f(1);
                  ~
!!! error TS2345: Argument of type '1' is not assignable to parameter of type 'T'.
!!! error TS2345:   '1' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
       var r3 = f<any>(null);
                  ~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
       var r4 = f(null);
    }
    